--- a/index.html
+++ b/index.html
@@ -46,11 +46,9 @@
 
             <p class="lead">Programmer</p>
             <ul class="social-icon">
-                <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.facebook.com/michal.k.kubicek"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                 <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
                 <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa fa-slack" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
             </ul>
         </div>
         <div class="profile-img"></div>
@@ -70,19 +68,18 @@
             </div>
             <div class="col-md-12">
                 <p>
-                    Credibly embrace visionary internal or "organic" sources and business benefits. Collaboratively
-                    integrate efficient portals rather than customized customer service. Assertively deliver
-                    frictionless services via leveraged interfaces. Conveniently evisculate accurate sources and
-                    process-centric expertise. Energistically fabricate customized imperatives through cooperative
-                    catalysts for change.
+                    I think of myself as a friendly guy. I'm very honest and easy to communicate with and I always seem to
+                    get on well with my colleagues. That works well with my ability to work well in a team and be in the
+                    leader role.
 
                 </p>
 
                 <p>
-                    Dramatically predominate mission-critical materials and cooperative systems. Holisticly synergize
-                    optimal results through team building "outside the box" thinking. Seamlessly facilitate frictionless
-                    relationships via robust imperatives. Monotonectally brand wireless products and excellent action
-                    items. Monotonectally disintermediate granular alignments via sustainable infomediaries.
+                    I have good work ethic and even I like to programme in most of my free time, so work never ends for me.
+                    I'm not afraid to try and learn new things. Right now I'm still a student at the Technical University
+                    of Liberec. My career goal is becoming a video game programmer either in my own company, creating my own
+                    games, or working for a well known video game company.
+
                 </p>
             </div>
         </div>
@@ -104,16 +101,16 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="expertise-item">
-                    <h3>Professionally drive</h3>
+                    <h3>Microsoft Office</h3>
 
                     <p>
-                        Synergistically strategize customer directed resources rather than principle.
+                        I have a lot of experience with the Office software bundle.
                     </p>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="expertise-item">
-                    <h3>Seamlessly leverage </h3>
+                    <h3>Seamlessly leverage</h3>
 
                     <p>
                         Quickly repurpose reliable customer service with orthogonal ideas. Competently.
@@ -153,7 +150,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="section-title">
-                    <h2>Skills</h2>
+                    <h2>Programming Skills</h2>
                 </div>
             </div>
         </div>
@@ -163,11 +160,11 @@
                 <div class="progress-wrapper">
 
                     <div class="progress-item">
-                        <span class="progress-title">Marketing</span>
+                        <span class="progress-title">Python</span>
 
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="62" aria-valuemin="0"
-                                 aria-valuemax="100" style="width: 62%"><span class="progress-percent"> 62%</span>
+                            <div class="progress-bar" role="progressbar" aria-valuenow="45" aria-valuemin="0"
+                                 aria-valuemax="100" style="width: 45%"><span class="progress-percent"> 45%</span>
                             </div>
                         </div>
                         <!-- .progress -->
@@ -176,7 +173,7 @@
 
 
                     <div class="progress-item">
-                        <span class="progress-title">Market Research</span>
+                        <span class="progress-title">Java</span>
 
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
@@ -189,7 +186,7 @@
 
 
                     <div class="progress-item">
-                        <span class="progress-title">Organisational Skills</span>
+                        <span class="progress-title">C#</span>
 
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0"
@@ -201,22 +198,22 @@
                     <!-- /.skill-progress -->
 
                     <div class="progress-item">
-                        <span class="progress-title">Communtcation Skills</span>
+                        <span class="progress-title">JavaScript</span>
 
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0"
-                                 aria-valuemax="100" style="width: 55%;"><span class="progress-percent"> 55%</span>
+                            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0"
+                                 aria-valuemax="100" style="width: 60%;"><span class="progress-percent"> 60%</span>
                             </div>
                         </div>
                         <!-- /.progress -->
                     </div>
                     <!-- /.skill-progress -->
                     <div class="progress-item">
-                        <span class="progress-title">Project Management</span>
+                        <span class="progress-title">PHP</span>
 
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0"
-                                 aria-valuemax="100" style="width: 80%;"><span class="progress-percent"> 80%</span>
+                            <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                                 aria-valuemax="100" style="width: 70%;"><span class="progress-percent"> 70%</span>
                             </div>
                         </div>
                         <!-- .progress -->
@@ -233,50 +230,7 @@
 </section>
 <!-- .skills-wrapper -->
 
-<section class="section-wrapper section-experience gray-bg">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="section-title"><h2>Work Experience</h2></div>
-            </div>
-        </div>
-        <!--.row-->
-        <div class="row">
-            <div class="col-md-12">
-                <div class="content-item">
-                    <small>2015 - Present</small>
-                    <h3>Head of market research</h3>
-                    <h4>Computer & Motor Ltd.</h4>
-
-                    <p>United Kingdom, London</p>
-                </div>
-                <!-- .experience-item -->
-                <div class="content-item">
-                    <small>2012 - 2015</small>
-                    <h3>Media Analyst</h3>
-                    <h4>BizzNiss</h4>
-
-                    <p>United Kingdom, London</p>
-                </div>
-                <!-- .experience-item -->
-                <div class="content-item">
-                    <small>2010 - 2012</small>
-                    <h3>Budget Administrator</h3>
-                    <h4>Somsom LLC</h4>
-
-                    <p>United Kingdom, London</p>
-                </div>
-                <!-- .experience-item -->
-            </div>
-        </div>
-        <!--.row-->
-    </div>
-    <!-- .container-fluid -->
-
-</section>
-<!-- .section-experience -->
-
-<section class="section-wrapper section-education">
+<section class="section-wrapper section-education gray-bg">
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
@@ -287,27 +241,19 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="content-item">
-                    <small>2010 - 2012</small>
-                    <h3>MA Product Design</h3>
-                    <h4>University of California</h4>
+                    <small>2017 - present</small>
+                    <h3>Information technology</h3>
+                    <h4>Technical University of Liberec</h4>
 
-                    <p>United Kingdom, London</p>
+                    <p>Czech Republic, Liberec</p>
                 </div>
                 <!-- .experience-item -->
                 <div class="content-item">
-                    <small>2007 - 2010</small>
-                    <h3>Business marketing course</h3>
-                    <h4>Royal Academy of Business</h4>
+                    <small>2013 - 2017</small>
+                    <h3>Information technology</h3>
+                    <h4>Secondary Technical School</h4>
 
-                    <p>United Kingdom, London</p>
-                </div>
-                <!-- .experience-item -->
-                <div class="content-item">
-                    <small>2002 - 2006</small>
-                    <h3>BA (Hons) Design</h3>
-                    <h4>University of Michigan</h4>
-
-                    <p>United Kingdom, London</p>
+                    <p>Czech Republic, Česká Lípa</p>
                 </div>
                 <!-- .experience-item -->
             </div>
@@ -319,7 +265,7 @@
 </section>
 <!-- .section-education -->
 
-<section class="section-wrapper section-interest gray-bg">
+<section class="section-wrapper section-interest">
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
@@ -335,24 +281,24 @@
                 <div class="content-item">
                     <h3>Books</h3>
 
-                    <p>Proactively extend market-driven e-tailers rather than enterprise-wide supply chains.
-                        Collaboratively embrace 24/7 processes rather than adaptive users. Seamlessly monetize
-                        alternative e-business.</p>
+                    <p>I occasionally read, but not as much as I would want to. My favorite genre is adventure.I've
+                    	read the entire Hunger games trilogy as an example. I also do read books about programming when
+                    	I'm learning a new programming language.</p>
+                </div>
+                <div class="content-item">
+                    <h3>Games</h3>
+
+                    <p>I do play video games quite a bit. I think a programmer dreaming of making successful video games
+                    	should spent time playing them as much as he can, so he can think about them as a player. That
+                    	perspective is very important to me.</p>
+
                 </div>
                 <div class="content-item">
                     <h3>Sports</h3>
 
-                    <p>Assertively grow optimal methodologies after viral technologies. Appropriately develop
-                        frictionless technology for adaptive functionalities. Competently iterate functionalized
-                        networks for best-of-breed services.</p>
-
-                </div>
-                <div class="content-item">
-                    <h3>Art</h3>
-
-                    <p>Dramatically utilize superior infomediaries whereas functional core competencies.
-                        Enthusiastically repurpose synergistic vortals for customer directed portals. Interactively
-                        pursue sustainable leadership via.</p>
+                    <p>I do not play sports myself, but I watch them quite a lot. I am a huge fan of Formula 1, I even
+                    	have books and autographs of some drivers or people connected to the sport. I do watch hockey, but
+                    	only the international events where I can cheer for my country's team.</p>
                 </div>
             </div>
         </div>
@@ -361,7 +307,7 @@
     </div>
 </section>
 
-<section class="section-contact section-wrapper">
+<section class="section-contact section-wrapper gray-bg">
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
@@ -375,12 +321,12 @@
             <div class="col-md-12">
                 <address>
                     <strong>Address</strong><br>
-                    1355 Market Street, Suite 900<br>
-                    San Francisco, CA 94103
+                    Studentská 1402/2<br>
+                    461 17 Liberec
                 </address>
                 <address>
                     <strong>Phone Number</strong><br>
-                    +61 3 8376 6284
+                    +420 383 766 284
                 </address>
 
                 <address>
@@ -389,7 +335,7 @@
                 </address>
                 <address>
                     <strong>Email</strong><br>
-                    <a href="mailto:#">coffee@amelie.me</a>
+                    <a href="mailto:#">michal.kubicek@tul.cz</a>
                 </address>
             </div>
         </div>
@@ -439,7 +385,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-12">
-                    <div class="copytext">&copy; 2015 Online CV. All rights reserved | Design By: <a
+                    <div class="copytext">&copy; 2019 Online CV. All rights reserved | Design By: <a
                             href="https://themehippo.com">ThemeHippo</a></div>
                 </div>
             </div>
