--- a/index.html
+++ b/index.html
@@ -104,16 +104,16 @@
                     <h3>Microsoft Office</h3>
 
                     <p>
-                        I have a lot of experience with the Office software bundle.
+                        Years of experience using all of the software in the Office software bundle.
                     </p>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="expertise-item">
-                    <h3>Seamlessly leverage</h3>
+                    <h3>Gitlab</h3>
 
                     <p>
-                        Quickly repurpose reliable customer service with orthogonal ideas. Competently.
+                        Very familiar with the software lifecycle tool Gitlab.
                     </p>
                 </div>
             </div>
@@ -122,22 +122,14 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="expertise-item">
-                    <h3>Interactively incubate</h3>
+                    <h3>Unity</h3>
 
                     <p>
-                        Interactively myocardinate high standards in initiatives rather than next-generation.
+                        I've made a few of my own small games through the game engine Unity .
                     </p>
                 </div>
             </div>
 
-            <div class="col-md-6">
-                <div class="expertise-item">
-                    <h3>Globally streamline</h3>
-
-                    <p>
-                        Dynamically initiate client-based convergence vis-a-vis performance based. </p>
-                </div>
-            </div>
         </div>
         <!-- .row -->
     </div>
